# mbed

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml  publish.yaml
crates/mbed/: Cargo.toml
crates/mbed-core/: Cargo.toml
crates/mbed-core/src/: lib.rs
crates/mbed-css/: Cargo.toml
crates/mbed-css/src/: lib.rs  tailwindcss.rs
crates/mbed-image/: Cargo.toml
crates/mbed-image/src/: lib.rs
crates/mbed-js/: Cargo.toml
crates/mbed-js/src/: bundle.rs  lib.rs
crates/mbed-macros/: Cargo.toml
crates/mbed-macros/src/: artifact.rs  cargo.rs  embedder.rs  lib.rs  local_file.rs
crates/mbed/src/: lib.rs
