[package]
name = "mbed-core"
description = "Embed and transform assets into your Rust crate."
version = "0.1.2"
authors = ["Callum Hopkins"]
edition = "2024"
license = "MIT"
repository = "https://github.com/callum-hopkins-dev/mbed"
readme = "README.md"
documentation = "https://docs.rs/mbed"
keywords = ["assets", "embed", "proc-macro", "bundling", "manifest"]
categories = [
    "development-tools::build-utils",
    "development-tools::procedural-macro-helpers",
    "web-programming",
    "multimedia::images",
]

[lib]
proc-macro = true

[dependencies]
mbed-macros = { version = "0.1.2", path = "../mbed-macros" }
mime_guess = "2.0.5"
tanager = "0.3.0"

[features]
cargo-progress = [ "mbed-macros/cargo-progress" ]
