[package]
name = "mbed-js"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
mbed-macros = { version = "0.1.0", path = "../mbed-macros" }
proc-macro2 = { version = "1.0.106", default-features = false }
quote = { version = "1.0.45", default-features = false }
rolldown = { version = "1.1.1", optional = true, default-features = false }
rolldown_common = { version = "1.1.1", default-features = false, optional = true }
rolldown_error = { version = "1.1.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tanager = "0.3.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", optional = true, features = ["rt"] }

[features]
default = ["bundle"]
cargo-progress = ["mbed-macros/cargo-progress"]
bundle = ["dep:rolldown", "dep:rolldown_common", "dep:rolldown_error", "dep:tokio"]
