[package]
name = "mbed"
description = "Embed and transform assets into your Rust crate."
version = "0.1.0"
authors = ["Callum Hopkins"]
edition = "2024"
license = "MIT"
repository = "https://github.com/callum-hopkins-dev/mbed"
readme = "README.md"
documentation = "https://docs.rs/mbed"
keywords = ["assets", "embed", "proc-macro", "bundling", "manifest"]
categories = [
    "development-tools::build-utils",
    "development-tools::procedural-macro-helpers",
    "web-programming",
    "multimedia::images",
]

[dependencies]
const-hex = { version = "1.19.1", default-features = false }
constcat = { version = "0.6.1", optional = true }
mbed-core = { version = "0.1.0", path = "../mbed-core", optional = true }
mbed-image = { version = "0.1.0", path = "../mbed-image", optional = true }
mbed-css = { version = "0.1.0", path = "../mbed-css", optional = true }
mbed-js = { version = "0.1.0", path = "../mbed-js", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[features]
default = ["serde", "macros", "cargo-progress", "tailwindcss", "image", "bundle"]
serde = ["dep:serde", "const-hex/serde"]

cargo-progress = [
  "mbed-core/cargo-progress",
  "mbed-css/cargo-progress",
  "mbed-image/cargo-progress",
  "mbed-js/cargo-progress",
]

macros = ["dep:mbed-core", "dep:constcat"]

css = ["macros", "dep:mbed-css"]
tailwindcss = ["css", "mbed-css/tailwindcss"]

image = ["macros", "dep:mbed-image"]
image-avif = ["mbed-image/avif"]
image-asm = ["mbed-image/asm"]

js = ["macros", "dep:mbed-js"]
bundle = ["js", "mbed-js/bundle"]
